- refactoring login error handling (now instead of flashing we return the template with proper messages and code)

--- a/bolt-api/apps/bolt_api/app/templates/auth/login.html
+++ b/bolt-api/apps/bolt_api/app/templates/auth/login.html
@@ -29,7 +29,7 @@
 
             <div id="content">
               <div id="content-wrapper">
-                {% for message in get_flashed_messages() %}
+                {% for message in g.get("errors") %}
                   <div class="alert alert-error">
                     <span class="pficon pficon-error-circle-o"></span>
                     <span class="feedback-text">{{ message }}</span>
